@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.1054 2017/03/10 18:36:35 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.1055 2017/03/13 22:34:47 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -6268,18 +6268,35 @@ Ffigure_fenceplot
 ?data-file bins
 ?datafile bins
 ?bins
- This option is EXPERIMENTAL (implementation details may change before this
- option appears in a stable release).
+ EXPERIMENTAL (implementation details may change further before this option
+ appears in a stable release).
  Syntax:
       plot 'DATA' using <XCOL> {:<YCOL>} bins{=<NBINS>}
-           {binrange [<LOW>:<HIGH>]}
- The `bins` option to a `plot` command first sorts the original data into
+           {binrange [<LOW>:<HIGH>]} {binwidth=<width>}
+
+ The `bins` option to a `plot` command first assigns the original data to
  equal width bins on x and then plots a single value per bin.  The default
  number of bins is controlled by `set samples`, but this can be changed by
  giving an explicit number of bins in the command.
 
- If no binrange is given, the range is taken from the current x axis range.
- Any data points outside this range will be ignored.
+ If no binrange is given, the range is taken from the extremes of the x
+ values found in 'DATA'.
+
+ Given the range and the number of bins, bin width is calculated automatically
+ and points are assigned to bins 0 to NBINS-1
+      BINWIDTH = (HIGH - LOW) / (NBINS-1)
+      xmin = LOW - BINWIDTH/2
+      xmax = HIGH + BINWIDTH/2
+      first bin holds points with (xmin <= x < xmin + BINWIDTH)
+      last bin holds points with (xmax-BINWIDTH <= x < xman)
+      each point is assigned to bin i = floor(NBINS * (x-xmin)/(xmax-xmin))
+
+ Alternatively you can provide a fixed bin width, in which case nbins is
+ calculated as the smallest number of bins that will span the range.
+
+ On output bins are plotted or tabulated by midpoint. E.g. if the programs
+ calculates bin width, the x coordinate output for the first bin is x=LOW
+ (not x=xmin).
 
  If only a single column is given in the using clause then each data point
  contributes a count of 1 to the accumulation of total counts in the bin for
