@@ -1,3 +1,13 @@
+2017-03-16  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/interpol.h src/interpol.c src/plot2d.c docs/gnuplot.doc:
+	Clean up code, documentation and demos for 'bins' option.
+	- document the algorithm for choosing bins
+	- binrange defaults to min/max of current data set (not axis range)
+	- trap degenerate case of all points UNDEFINED
+	- new option binwidth=<width>. Now you can either determine binwidth
+	  from range + nbins, or nbins from range + binwidth
+
 2017-03-13  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (plot_impulses) docs/gnuplot.doc:  Apply the x offset
